# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.55 2009-11-18 15:35:22 mn Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.6 (2009/??/??)
 - (2009/11/18) Fixed bug#4319 - 'no quotable message' error for old messages
    after upgrade.
 - (2009/11/18) Added FastCGI handle for web installer.
 - (2009/11/17) Fixed bug#4299 - Image Upload in Signature Management fails.
 - (2009/11/16) Fixed bug#4464 - Spell checker (WYSIWIG + ispell) causes
    exceptions sometimes.
 - (2009/11/16) Fixed bug#4507 - Add Ticket Events for SLAUpdate, ServiceUpdate,
    and TicketTypeUpdate in AdminNotificationEvent UI.
 - (2009/11/16) Fixed bug#4509 - Notification (event based) comments are not
    saved.
 - (2009/11/06) Fixed bug#2069 - Update of customer company id in admin
    interface failed.
 - (2009/11/06) Fixed bug#2948 - Renamed crypt option "md5" to "md5-crypt" to
    avoid missunderstanding.
 - (2009/10/30) Fixed JS Month check in frontend files.
 - (2009/10/26) Fixed bug#4455 - Input field in Preferences of a Dashboard
    module doesn't save settings.
 - (2009/10/26) Fixed bug#4454 - restore.pl is not working.
 - (2009/10/26) Fixed bug#4447 - TimeUnits not saved in AgentTicketMove.pm when
    omitting a note.
 - (2009/10/22) Fixed bug#4188 - Restore original subject check in AgentTicketMerge.
 - (2009/10/21) Fixed bug#4232 - SpellChecker Customer-Interface is not
    working.
 - (2009/10/19) Fixed bug#4433 - StateDefault is being ignored in when composing
    an email answer, current ticket state or first one in list gets selected.

2.4.5 (2009/10/15)
 - (2009/10/12) Fixed bug#3541 - Deleting tickets is not possible when using
    Full Text Search Index on MS-SQL or PostgreSQL.